2000-06-29  Peter Williams  <peterw@helixcode.com>

	* gui/Makefile.am (LINK_FLAGS): Make the calendar-pilot-sync
	program conditional on HAVE_GNOME_PILOT, and add 
	GNOME_PILOT_CFLAGS, GNOME_PILOT_LIBS, and PISOCK_LIBS in the
	appropriate places.

2000-06-29  Seth Alves  <alves@hungry.com>

	* pcs/cal.c (Cal_get_uid_by_pilot_id): 
	(Cal_update_pilot_id): 
	* pcs/cal-backend-imc.c (cal_backend_imc_update_pilot_id): 
	(cal_backend_imc_get_uid_by_pilot_id): 
	* pcs/cal-backend.c (cal_backend_get_uid_by_pilot_id): 
	(cal_backend_update_pilot_id):  server code to service these:

	* gui/calendar-pilot-sync.c: updated to make use of cal-client.
	also uses dirty bits on both sides to aid in syncing.

	* cal-client/cal-client.c (cal_client_get_uid_by_pilot_id): new
	function -- ask the cal server to return uid given an object's
	pilot id.
	(cal_client_update_pilot_id): new function -- inform the
	cal server of an objects pilot id and pilot dirty-flag.

2000-06-28  Federico Mena Quintero  <federico@helixcode.com>

	* cal-util/cal-component.[ch]: New files for the new iCalendar
	component object.  Today's properties: basic component type, UID,
	SUMMARY.

	* cal-util/Makefile.am: Added cal-component.[ch] to the list of
	sources.

2000-06-27  Michael Meeks  <michael@helixcode.com>

	* pcs/Makefile.am (INCLUDES): use BONOBO_VFS_GNOME_CFLAGS.

2000-06-26  Christopher James Lahey  <clahey@helixcode.com>

	* gui/calendar-model.c: Added an #ifdefed value_to_string handler
	assignment.

2000-06-26  Federico Mena Quintero  <federico@helixcode.com>

	* gui/calendar-model.c (calendar_model_duplicate_value):
	Implement.
	(calendar_model_initialize_value): Implement.
	(calendar_model_value_is_empty): Implement.

2000-06-21  Damon Chaplin  <damon@helixcode.com>

	* gui/e-day-view.c (e_day_view_reshape_long_event): set event before
	using it!
	(e_day_view_init): used new colors from tigert.

2000-06-21  Christopher James Lahey  <clahey@helixcode.com>
